updated header nav items to prevent the text from breaking/overflowing

--- a/tethysapp/hydraviewer/public/css/main.css
+++ b/tethysapp/hydraviewer/public/css/main.css
@@ -329,7 +329,9 @@ p {
     border-right: 1px solid gray;
     margin-right:10px;
     max-height: 40px;
-    overflow-y: hidden;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .nav_item:hover {
